kube-prom-gtw/kube-prom-grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-https
  namespace: monitoring
spec:
  parentRefs:
    # - name: kube-prom-gtw
    #   sectionName: http
    #   kind: Gateway
    - name: kube-prom-gtw
      sectionName: https
      kind: Gateway
  hostnames:
    - grafana.ashwingowda.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-stack-grafana
          namespace: monitoring
          port: 80

    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
