kube-prom-gtw/kube-prom-prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-http-https
  namespace: monitoring
spec:
  parentRefs:
    # - name: staging-gtw
    #   sectionName: http
    #   kind: Gateway
    - name: kube-prom-gtw
      sectionName: https
      kind: Gateway
  hostnames:
    - prometheus.ashwingowda.com
    
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prom-kube-prometheus-prometheus
          namespace: monitoring
          port: 9090
